# control-deck

./: .env.example  .gitignore  AGENTS.md  BEHAVIOR.md  DESIGN.md  MEMORY.md  README.md  REBUILD_PLAN.md  SOUL.md  SURFACE.md  TOOLS.md  USER.md  WORKLOG.md  electron-builder.yml  eslint.config.mjs  llm.txt  middleware.ts  next.config.ts  package-lock.json  package.json  start-full-stack.sh  stryker.conf.mjs  tailwind.config.ts  tsconfig.json
UI/: Control Deck - Warp direction.html
app/: audio.css  blog-theme.css  globals.css  layout.tsx  page.tsx  warp.css
apps/model-tray/src-tauri/: Cargo.toml  tauri.conf.json
apps/model-tray/src-tauri/capabilities/: default.json
apps/model-tray/src-tauri/src/: gpu.rs  lib.rs  main.rs  models.rs  providers.rs  scanner.rs  sidecar.rs
apps/voice-core/: pyproject.toml
apps/voice-core/scripts/: build-coreml-libwhisper.sh
apps/voice-core/src/voice_core/: __init__.py  __main__.py  audio_utils.py  cli.py  config.py  protocol.py  pull.py  registry.py  server.py  tier.py
apps/voice-core/src/voice_core/engines/: __init__.py  base.py
apps/voice-core/src/voice_core/engines/diarize/: pyannote_diarize.py
apps/voice-core/src/voice_core/engines/speaker/: sherpa_speaker.py
apps/voice-core/src/voice_core/engines/stt/: faster_whisper.py  moonshine.py  parakeet.py  sherpa_streaming.py  whisper_cpp.py
apps/voice-core/src/voice_core/engines/tts/: chatterbox.py  f5.py  kokoro.py  sherpa_tts.py
apps/voice-core/src/voice_core/engines/vad/: silero.py
apps/voice-core/src/voice_core/engines/wake/: openwakeword.py
artifacts/: benchmark-strategy-2026-05-14.html  computer-use-online-automation-benchmarks-2026-05-14.md  control-deck-prompt-lessons-best-practices.md
components/: CommandPalette.tsx  DeckShell.tsx  InspectorSheet.tsx  RightRail.tsx  Tweaks.tsx
data/: hf-catalog.json  nvidia-catalog.json  openrouter-catalog.json
docs/: TODO-LITE-MODE.md  mcp-workspace-relay.md
electron/: env.d.ts  main.ts  preload.ts  tsconfig.json
lib/: auth.ts  open-in-browser.ts  utils.ts
scripts/: apply-fuses.cjs  atspi-daemon-smoke.ts  atspi-helper.py  attach-harness.sh  bench.mjs  bench.test.mjs  build-macos-helper.sh  build-terminal-service.cjs  build-win-host.cjs  check-events.ts  copy-native-binaries.cjs  copy-vad-assets.cjs  electron-after-pack.cjs  export-agent-work-training-data.test.ts  export-agent-work-training-data.ts  mcp-stdio-wrapper.sh  mcp-stdio.ts  mcp-tool-eval.ts  model-catalog.ts  postbuild-electron.cjs  qwen-omni-sidecar.py  qwen-omni-smoke.py  remote-desktop.py  screencast-capture.py  screenshot-capture.py  screenshot-capture.test.py  smoke-windows-native.mjs  terminal-service.ts  test-glyph-tools.ts  test-glyph.ts  test-inference-registry.ts  test-native-e2e.ts  (+6 more)
(+969 files in other folders)
